force-app/main/default/objects/tc9_pr__Payment_File_Line__c/tc9_pr__Payment_File_Line__c.object-meta.xml
<CustomObject>
    <label>Payment File Line</label>
    <nameField>
        <displayFormat>PFL-{0000000000}</displayFormat>
        <label>Payment File Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment File Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>