force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Account_Name__c</fullName>
    <description>The bank account name of the related Payment Detail record.</description>
    <inlineHelpText>The bank account name of the related Payment Detail record.</inlineHelpText>
    <label>Bank Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>