force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Account_Number__c</fullName>
    <description>The bank account number of the related Payment Detail record.</description>
    <inlineHelpText>The bank account number of the related Payment Detail record.</inlineHelpText>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>