force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Bank_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Branch_Code__c</fullName>
    <description>The branch code of the related Payment Detail record.</description>
    <inlineHelpText>The branch code of the related Payment Detail record.</inlineHelpText>
    <label>Bank Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>