force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Bank_Statement_Text__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Statement_Text__c</fullName>
    <description>The statement text that will be included on the Payment File specifying where the payment is made from.</description>
    <inlineHelpText>The statement text that will be included on the Payment File specifying where the payment is made from.</inlineHelpText>
    <label>Bank Statement Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>