force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Cheque_Recipient__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Cheque_Recipient__c</fullName>
    <description>To whom a cheque for payment should be made out to. This value is pulled from the related Payment Details record.</description>
    <inlineHelpText>To whom a cheque for payment should be made out to. This value is pulled from the related Payment Details record.</inlineHelpText>
    <label>Cheque Recipient</label>
    <type>TextArea</type>
</CustomField>