force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Contact__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact that relates to the Payment File Line.</description>
    <inlineHelpText>The Contact that relates to the Payment File Line.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment File Lines</relationshipLabel>
    <relationshipName>Payment_File_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>