force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__International_Bank_Account_Number_IBAN__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_Account_Number_IBAN__c</fullName>
    <description>The account number of the International Bank Account that payments will be made into. This value is pulled from the related Payment Details record.</description>
    <inlineHelpText>The account number of the International Bank Account that payments will be made into. This value is pulled from the related Payment Details record.</inlineHelpText>
    <label>International Bank Account Number (IBAN)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>