force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__International_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_Name__c</fullName>
    <description>The bank name of the International Bank Account that payments will be made into. This value is pulled from the related Payment Details record.</description>
    <inlineHelpText>The bank name of the International Bank Account that payments will be made into. This value is pulled from the related Payment Details record.</inlineHelpText>
    <label>International Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>