force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__International_Bank_Receiving_Currency__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_Receiving_Currency__c</fullName>
    <description>The currency that the payment into the International Bank Account will be made with. This value is pulled from the related Payment Details record.</description>
    <inlineHelpText>The currency that the payment into the International Bank Account will be made with. This value is pulled from the related Payment Details record.</inlineHelpText>
    <label>International Bank Receiving Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED - U.A.E. Dirham</fullName>
            </value>
            <value>
                <fullName>AUD - Australian Dollar</fullName>
            </value>
            <value>
                <fullName>BND - Brunei Dollar</fullName>
            </value>
            <value>
                <fullName>CAD - Canadian Dollar</fullName>
            </value>
            <value>
                <fullName>CHF - Swiss Franc</fullName>
            </value>
            <value>
                <fullName>CNY - Chinese Yuan Renminbi</fullName>
            </value>
            <value>
                <fullName>CZK - Czech Koruna</fullName>
            </value>
            <value>
                <fullName>DKK - Danish Kroner</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
            <value>
                <fullName>FJD - Fijian Dollar</fullName>
            </value>
            <value>
                <fullName>GBP - Great British Pound</fullName>
            </value>
            <value>
                <fullName>HKD - Hong Kong Dollar</fullName>
            </value>
            <value>
                <fullName>HUF - Hungarian Forint</fullName>
            </value>
            <value>
                <fullName>IDR - Indonesian Rupiah</fullName>
            </value>
            <value>
                <fullName>ILS - Israeli New Shekel</fullName>
            </value>
            <value>
                <fullName>INR - Indian Rupee</fullName>
            </value>
            <value>
                <fullName>JPY - Japanese Yen</fullName>
            </value>
            <value>
                <fullName>KRW - South Korean Won</fullName>
            </value>
            <value>
                <fullName>KWD - Kuwaiti Dinar</fullName>
            </value>
            <value>
                <fullName>LKR - Sri Lankan Rupee</fullName>
            </value>
            <value>
                <fullName>MAD - Moroccan Dirham</fullName>
            </value>
            <value>
                <fullName>MGA - Malagasy Ariary</fullName>
            </value>
            <value>
                <fullName>MXN - Mexican Peso</fullName>
            </value>
            <value>
                <fullName>MYR - Malaysian Ringgit</fullName>
            </value>
            <value>
                <fullName>NOK - Norwegian Kroner</fullName>
            </value>
            <value>
                <fullName>NZD - New Zealand Dollar</fullName>
            </value>
            <value>
                <fullName>OMR - Oman Rial</fullName>
            </value>
            <value>
                <fullName>PEN - Peruvian Nuevo Sol</fullName>
            </value>
            <value>
                <fullName>PGK - P.N.G. Kina</fullName>
            </value>
            <value>
                <fullName>PHP - Philippine Peso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>