force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__International_Bank_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_Recipient_Name__c</fullName>
    <description>The name of the recipient of the international payments will be made into. This value is pulled from the related Payment Details record.</description>
    <inlineHelpText>The name of the recipient of the international payments will be made into. This value is pulled from the related Payment Details record.</inlineHelpText>
    <label>International Bank Recipient Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>