force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Pay_Advice__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Pay Advice record.</description>
    <inlineHelpText>The related Pay Advice record.</inlineHelpText>
    <label>Pay Advice</label>
    <referenceTo>tc9_pr__Pay_Advice__c</referenceTo>
    <relationshipLabel>Payment File Lines</relationshipLabel>
    <relationshipName>Payment_File_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>