force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Amount__c</fullName>
    <description>The amount that will be paid to the related Payment Detail record.</description>
    <inlineHelpText>The amount that will be paid to the related Payment Detail record.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>