force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Payment_File__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment File</label>
    <referenceTo>tc9_pr__Payment_File__c</referenceTo>
    <relationshipLabel>Payment File Lines</relationshipLabel>
    <relationshipName>Payment_File_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>