force-app/main/default/objects/tc9_pr__Payment_File_Line__c/fields/tc9_pr__Recipient_Name_non_payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Recipient_Name_non_payee__c</fullName>
    <description>The recipient name to be displayed on the Payment File PDF report when the Payment File Line is not linked to a Payee record.</description>
    <inlineHelpText>The recipient name to be displayed on the Payment File PDF report when the Payment File Line is not linked to a Payee record.</inlineHelpText>
    <label>Recipient Name (non-payee)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>